# ponyview

./: Cargo.toml
src/: application.rs  commands.rs  constants.rs  main.rs  thumbnails.rs  window.rs
src/paintable/: frame.rs  imp.rs  mod.rs
src/style/: style.css
