[package]
name = "ponyview"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake3 = "1.5.3"
clap = { version = "4.5.4", features = ["derive", "cargo"] }
gtk = { version = "0.8.1", package = "gtk4", features = ["v4_12"] }
image = { version = "0.25.2", features = ["avif-native"] }
